fix numpy version dependency in image

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,14 @@ result
 
 /.idea
 /config_gr.yaml
+/config_gr_no_c2c.yaml
 __pycache__
+/data/2023-07-11_1734301689096870.ch.Grundwasserschutzareale.ch.SH.Grundwasserschutzareale.OeREBKRMtrsfr_V2_0.adc8ee13-5904-45d9-a04f-d4cbae6d3026.input.xtf
+/data/2023-07-11_1735171689096917.ch.Grundwasserschutzzonen.ch.SH.Grundwasserschutzzonen.OeREBKRMtrsfr_V2_0.df76d1db-4b44-471d-8d47-711794d17bf4.input.xtf
+/data/2023-07-12_1734291689183269.ch.Grundwasserschutzareale.ch.SH.Grundwasserschutzareale.OeREBKRMtrsfr_V2_0.a5c98c58-b6b8-45ee-811f-ce1e9b68b817.input.xtf
+/data/3542_2023-05-08_pz_oereb_9bb3388261fa701425ea105e40719f5c_mgdm.xtf
+/data/3668_2023-03-21_pz_oereb_0e6406eb52d1da51fe2c72dfeaebfebd_mgdm.xtf
+/data/3921_2024-07-04_pz_oereb_754093c7e19acc217f4215e8ce570cb2.xtf
+/data/sh_waldreservate_v1_2.xtf
+/data/sha_nutzungsplanung_v1_2.xtf
+/data/waldgrenzen_v1_2.xtf
